<resources>
    <string name="app_name">Music Club</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="notifications_admin_channel_name">Admin Channel</string>
    <string name="notifications_admin_channel_description">Admin channel Desc</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="remember_me">Keep me signed in</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_regNo">Registration Number</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_cnfpassword">Confirm Password</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Name or RegNo…</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_search_results">No search results found for \'%s\'</string>
    <string name="selectedCount">%d of %d selected</string>
    <string name="booking_notice">Note :-\na)Bookings should be done for atleast 1 hour\nb)Bookings closes at 10 PM for the current day</string>
    <string name="booking_for">Booking for 1 member </string>
    <string name="confirm_booking">Are you sure you want to confirm this booking?</string>
    <string name="dialog_details">Info</string>
    <string name="dialog_delete">Delete</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noMemebersMsg">No Members Found\nAll members are already added</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_free_hours">FreeHours</string>

</resources>
